--- a/Robots/NNFX/NNFX/NNFX.csproj
+++ b/Robots/NNFX/NNFX/NNFX.csproj
@@ -11,5 +11,11 @@
     <Compile Include="..\..\..\Server\Api.cs">
       <Link>Api.cs</Link>
     </Compile>
+    <Compile Include="..\..\..\Server\Logger.cs">
+      <Link>Logger.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\Server\Strategy.cs">
+      <Link>Strategy.cs</Link>
+    </Compile>
   </ItemGroup>
 </Project>
